# miniRDBMS

./: .gitignore  CMakeLists.txt  README.md
data/: emailers.pk.idx  emailers.tbl  orders.tbl  products.pk.idx  products.tbl  users.tbl
include/: ast.h  catalog.h  executor.h  index.h  lexer.h  myparser.h  mystorage.h  token.h  utils.h  web.h
src/: catalog.c  executor.c  index.c  lexer.c  main.c  myparser.c  mystorage.c  utils.c  web.c
